process-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: process-service
spec:
  selector:
    app.kubernetes.io/name: process-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
