process-service/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-process-service
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/canary: "true"
#    nginx.ingress.kubernetes.io/canary-weight: "50"
#    nginx.ingress.kubernetes.io/keep-alive: "75"
#    nginx.ingress.kubernetes.io/keep-alive-requests: "64"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "0"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: process-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  ingressClassName: nginx
